# csdn-src

BrowserTabWidget/: BrowserTabWidget.pro  browertabwidget.cpp  browertabwidget.h  dialog.cpp  dialog.h
SearchDisplayTreeWidget/: SearchDisplayTreeWidget.pro  mainwindow.cpp  mainwindow.h  searchdisplaytreewidget.cpp  searchdisplaytreewidget.h
SearchJumpTreeWidget/: SearchJumpTreeWidget.pro  mainwindow.cpp  mainwindow.h  searchjumptreewidget.cpp  searchjumptreewidget.h
SecondaryComboBox/: SecondaryComboBox.pro  mainwindow.cpp  mainwindow.h  secondarycombobox.cpp  secondarycombobox.h
SimpleExcelTable/: SimpleExcelTable.pro  mainwindow.cpp  mainwindow.h  simpleexceltable.cpp  simpleexceltable.h
locale_unit_switch/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  TranslateManager.cpp  TranslateManager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
locale_unit_switch/binR/: config.ini
locale_unit_switch/binR/lang/: en.qm  ru.qm  zh_CN.qm  zh_TW.qm
locale_unit_switch/lang/: en.ts  ru.ts  translate.bat  zh_CN.ts  zh_TW.ts
occt_project/3rdpatry/occt/lib/: TKBO.lib  TKBRep.lib  TKBin.lib  TKBinL.lib  TKBinTObj.lib  TKBinXCAF.lib  TKBool.lib  TKCAF.lib  TKCDF.lib  TKDCAF.lib  TKDE.lib  TKDECascade.lib  TKDEIGES.lib  TKDEOBJ.lib  TKDEPLY.lib  TKDESTL.lib  TKDEVRML.lib  TKDraw.lib  TKExpress.lib  TKFeat.lib  TKFillet.lib  TKG2d.lib  TKG3d.lib  TKGeomAlgo.lib  TKGeomBase.lib  TKHLR.lib  TKHelix.lib  TKLCAF.lib  TKMath.lib  TKMesh.lib  TKMeshVS.lib  TKOffset.lib  TKOpenGl.lib  TKOpenGlTest.lib  TKPrim.lib  TKQADraw.lib  TKRWMesh.lib  TKService.lib  TKShHealing.lib  TKStd.lib  (+25 more)
occt_project/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
